# social-media-book-django

./: .gitignore  db.sqlite3  pyproject.toml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: base.html
account/templates/account/: .register.html.swp  edit.html  login.html  register.html  register_done.html
account/templates/registration/: login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html
bookmarks/: settings.py  urls.py
